# LLVM-dynamic-analysis

./: CMakeLists.txt  README.md
lib/tolerator-inst/: CMakeLists.txt  Tolerator.cpp  Tolerator.h
lib/tolerator-rt/: CMakeLists.txt  runtime.cpp
test/: CMakeLists.txt
test/ll/: free-global.ll  free-local.ll  free-middle.ll  free-twice.ll  free-wild.ll  local-arrays.ll  read-failure-propagates.ll  read-global-byte.ll  read-local-after-return.ll  read-local-byte-array.ll  read-malloc-after-free.ll  read-malloc-byte.ll  read-malloc-overlap.ll  signed-char-division.ll  signed-int-division.ll  store-global-byte.ll  store-local-byte-array.ll  store-malloc-byte.ll  unsigned-char-division.ll
